--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-    "name": "bootstrap-sass-fontawesome",
-    "version": "1.0.0",
-    "private": "true",
-    "devDependencies": {
-        "gulp": "^3.8.11",
-        "gulp-bower": "0.0.10",
-        "gulp-notify": "^2.2.0",
-        "gulp-ruby-sass": "^0.7.1"
-    }
+  "name": "bootstrap-sass-fontawesome",
+  "version": "1.0.0",
+  "private": "true",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-processhtml": "^0.3.8",
+    "grunt-uncss": "^0.4.3",
+    "gulp": "^3.8.11",
+    "gulp-bower": "0.0.10",
+    "gulp-notify": "^2.2.0",
+    "gulp-ruby-sass": "^0.7.1"
+  }
 }
